@@ -158,7 +158,7 @@ const char *upscli_strerror(UPSCONN_t *ups)
 /* internal: abstract the SSL calls for the other functions */
 static int net_read(UPSCONN_t *ups, char *buf, size_t buflen)
 {
-	int		ret;
+	int	ret;
 
 #ifdef HAVE_SSL
 	if (ups->ssl) {
@@ -191,7 +191,7 @@ static int net_read(UPSCONN_t *ups, char *buf, size_t buflen)
 /* internal: abstract the SSL calls for the other functions */
 static int net_write(UPSCONN_t *ups, const char *buf, size_t buflen)
 {
-	int		ret;
+	int	ret;
 
 #ifdef HAVE_SSL
 	if (ups->ssl) {
@@ -341,6 +341,10 @@ int upscli_connect(UPSCONN_t *ups, const char *host, int port, int flags)
 	char			sport[NI_MAXSERV];
 	int			v;
 #endif
+
+	if (!ups) {
+		return -1;
+	}
 
 	/* clear out any lingering junk */
 	ups->fd = -1;
@@ -651,6 +655,10 @@ int upscli_get(UPSCONN_t *ups, unsigned int numq, const char **query,
 {
 	char	cmd[UPSCLI_NETBUF_LEN], tmp[UPSCLI_NETBUF_LEN];
 	
+	if (!ups) {
+		return -1;
+	}
+
 	if (numq < 1) {
 		ups->upserror = UPSCLI_ERR_INVALIDARG;
 		return -1;
@@ -698,6 +706,10 @@ int upscli_get(UPSCONN_t *ups, unsigned int numq, const char **query,
 int upscli_list_start(UPSCONN_t *ups, unsigned int numq, const char **query)
 {
 	char	cmd[UPSCLI_NETBUF_LEN], tmp[UPSCLI_NETBUF_LEN];
+
+	if (!ups) {
+		return -1;
+	}
 
 	if (numq < 1) {
 		ups->upserror = UPSCLI_ERR_INVALIDARG;
@@ -754,6 +766,10 @@ int upscli_list_next(UPSCONN_t *ups, unsigned int numq, const char **query,
 {
 	char	tmp[UPSCLI_NETBUF_LEN];
 
+	if (!ups) {
+		return -1;
+	}
+
 	if (upscli_readline(ups, tmp, sizeof(tmp)) != 0) {
 		return -1;
 	}
@@ -798,7 +814,11 @@ int upscli_sendline(UPSCONN_t *ups, const char *buf, size_t buflen)
 {
 	int	ret;
 
-	if ((!ups) || (ups->fd == -1)) {
+	if (!ups) {
+		return -1;
+	}
+
+	if (ups->fd == -1) {
 		ups->upserror = UPSCLI_ERR_DRVNOTCONN;
 		return -1;
 	}
@@ -828,7 +848,11 @@ int upscli_readline(UPSCONN_t *ups, char *buf, size_t buflen)
 	int	ret;
 	size_t	recv;
 
-	if ((!ups) || (ups->fd == -1)) {
+	if (!ups) {
+		return -1;
+	}
+
+	if (ups->fd == -1) {
 		ups->upserror = UPSCLI_ERR_DRVNOTCONN;
 		return -1;
 	}
